# hcompress

./: .gitignore  HANDOFF.md  MANUAL.md  PLUGIN_SYSTEM_SNAPSHOT.md  README.md  README_CN.md  bomb_test.hcf  hcompress.bat  install.sh  pyproject.toml  启动GUI.bat
demo/: hcompress-demo.pptx  index.html  make_ppt.py  ui-prototype.html
hcompress/: __init__.py  __main__.py  archiver.py  bitstream.py  canonical.py  checksum.py  cli.py  engine.py  format.py  gui.py  launcher.py  parallel.py  tui.py
hcompress/c_ext/: __init__.py
hcompress/interfaces/: __init__.py  block_splitter.py  checksum.py  codec.py  extension.py  filter.py  hook.py  io_backend.py  matchfinder.py  observer.py  transform.py
hcompress/plugins/: __init__.py  manifest.py  registry.py
hcompress/plugins/builtin/: __init__.py  bomb_guard.py  bwt_mtf_transform.py  bwt_transform.py  generic_hub.py  hello_plugin.py  legacy_mode.py  mtf_transform.py  parallel_compress.py
hcompress/plugins/builtin/formats/: __init__.py
hcompress/plugins/builtin/hubs/: filter_hub.py  transform_hub.py
hcompress/plugins/sdk/: __init__.py  base.py  scaffold.py
tests/: __init__.py  test_bitstream.py  test_canonical.py  test_cli.py  test_engine.py  test_format.py  test_interfaces.py
tools/: make_bomb.py
